maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:10: error: identifier expected but integer literal found.
      right():dir+=1
                   ^